--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.16.0
   smooth_page_indicator: ^1.1.0
+  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
