--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   google_nav_bar: ^5.0.6
   google_fonts: ^6.1.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
