--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   google_fonts: ^6.1.0
   http: ^1.1.0
+  dash_chat_2: ^0.0.20
 
 dev_dependencies:
   flutter_test:
