--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   google_fonts: ^6.1.0
   http: ^1.1.0
   dash_chat_2: ^0.0.20
+  dio: ^5.4.0
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
