--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   lottie: ^2.7.0
+  flutter_local_notifications: ^16.3.2
+  flutter_datetime_picker: ^1.5.1
+  flutter_datetime_picker_plus: ^2.1.0
 
 dev_dependencies:
   flutter_test:
