--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
     <application
-        android:label="myfit"
+        android:label="FitBuddy"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
