--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,13 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   flutter_datetime_picker: ^1.5.1
   flutter_datetime_picker_plus: ^2.1.0
+  flutter_native_splash: ^2.3.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,6 +64,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+flutter_native_splash:
+  image: lib/assets/images/running.png
+  color: "#000000"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
